Refactor: make functions don't rewrite recs

--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        " ('RolledTheDice', 0.97334623)]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "(41143, 20)"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "(41143, 2)"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,22 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3.6010728,  0.0774124],\n",
-       "       [-3.897131 , -4.700751 ],\n",
-       "       [-1.2897592, -2.1058679],\n",
+       "array([[ 3.4981177, -2.786402 ],\n",
+       "       [ 4.1943135,  5.09649  ],\n",
+       "       [ 4.831988 ,  1.9612825],\n",
        "       ...,\n",
-       "       [-3.5628572, -6.5976143],\n",
-       "       [ 9.227859 ,  1.489325 ],\n",
-       "       [-1.9831607, -2.7639296]], dtype=float32)"
+       "       [ 2.7854004,  6.819096 ],\n",
+       "       [-1.8735471, -3.6882179],\n",
+       "       [ 5.0341783,  3.1146567]], dtype=float32)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,40 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(27148, 1113188), 86.0\n",
-      "(27148, 824475), 30.0\n",
-      "(27148, 747152), 9.0\n",
-      "(27148, 726613), 1.0\n",
-      "(27148, 2314515), 84.0\n",
-      "(27148, 1640350), 52.0\n",
-      "(27148, 1206063), 17.0\n",
-      "(27148, 1491311), 71.0\n",
-      "(27148, 1003607), 165.0\n",
-      "(27148, 2089596), 15.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "cx = comments\n",
-    "\n",
-    "k = 0\n",
-    "for i, j, v in zip(comments.row, cx.col, cx.data):\n",
-    "    if k == 10:\n",
-    "        break\n",
-    "    print( \"(%d, %d), %s\" % (i,j,v) )\n",
-    "    k += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [03:37<00:00,  2.21s/it, correct=95.94%, skipped=7.16%]\n"
+      "100%|██████████| 100/100 [03:57<00:00,  2.68s/it, correct=95.88%, skipped=7.16%]\n"
      ]
     }
    ],
@@ -433,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,25 +414,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('dogs', 2.9264455),\n",
-       " ('Dogtraining', 2.752574),\n",
-       " ('puppy101', 2.6112063),\n",
-       " ('Pets', 2.550935),\n",
-       " ('AskVet', 2.4905205),\n",
-       " ('WiggleButts', 2.447608),\n",
-       " ('DoggyDNA', 2.421627),\n",
-       " ('rescuedogs', 2.4086597),\n",
-       " ('mutt', 2.3754249),\n",
-       " ('Veterinary', 2.3596926)]"
+       "[('dogs', 2.9314072),\n",
+       " ('Dogtraining', 2.7764423),\n",
+       " ('puppy101', 2.6298523),\n",
+       " ('Pets', 2.5438745),\n",
+       " ('AskVet', 2.5281637),\n",
+       " ('rescuedogs', 2.4704523),\n",
+       " ('WiggleButts', 2.4026453),\n",
+       " ('DoggyDNA', 2.3814583),\n",
+       " ('mutt', 2.3722208),\n",
+       " ('schnauzers', 2.3701365)]"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,34 +452,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e72e844826f429f99bac62bc6089bf3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=2323019), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# generate recommendations for each user and write out to a file\n",
-    "user_comments = comments.T.tocsr()\n",
+    "write_bpr_recommendations = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if write_bpr_recommendations:\n",
+    "    # generate recommendations for each user and write out to a file\n",
+    "    user_comments = comments.T.tocsr()\n",
     "\n",
-    "with tqdm.tqdm_notebook(total=len(users)) as progress:\n",
-    "    with codecs.open(output_filename, \"w\", \"utf8\") as o:\n",
-    "        for userid, username in enumerate(users):\n",
-    "            for subredditid, score in model.recommend(userid, user_comments):\n",
-    "                o.write(\"%s\\t%s\\t%s\\n\" % (username, subreddits[subredditid], score))\n",
-    "            progress.update(1)"
+    "    with tqdm.tqdm_notebook(total=len(users)) as progress:\n",
+    "        with codecs.open(output_filename, \"w\", \"utf8\") as o:\n",
+    "            for userid, username in enumerate(users):\n",
+    "                for subredditid, score in model.recommend(userid, user_comments):\n",
+    "                    o.write(\"%s\\t%s\\t%s\\n\" % (username, subreddits[subredditid], score))\n",
+    "                progress.update(1)"
    ]
   },
   {
