Add: train test split for evaluation

--- a/models.ipynb
+++ b/models.ipynb
@@ -461,14 +461,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "user_comments = comments.T.tocsr()\n",
     "if write_bpr_recommendations:\n",
     "    # generate recommendations for each user and write out to a file\n",
-    "    user_comments = comments.T.tocsr()\n",
-    "\n",
     "    with tqdm.tqdm_notebook(total=len(users)) as progress:\n",
     "        with codecs.open(output_filename, \"w\", \"utf8\") as o:\n",
     "            for userid, username in enumerate(users):\n",
@@ -488,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,25 +498,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Buttcoin', 3.698471),\n",
-       " ('redditrequest', 3.686717),\n",
-       " ('spam', 3.6279433),\n",
-       " ('programmingcirclejerk', 3.593357),\n",
-       " ('modclub', 3.5591707),\n",
-       " ('roguelikedev', 3.4863684),\n",
-       " ('metanarchism', 3.4842796),\n",
-       " ('LinuxCirclejerk', 3.4640236),\n",
-       " ('ModelUSGov', 3.45617),\n",
-       " ('lisp', 3.3709202)]"
+       "[('programmingcirclejerk', 3.6349902),\n",
+       " ('CivCringe', 3.4902062),\n",
+       " ('LinuxCirclejerk', 3.413476),\n",
+       " ('cataclysmdda', 3.3854566),\n",
+       " ('roguelikedev', 3.3806605),\n",
+       " ('spam', 3.3729367),\n",
+       " ('AutoModerator', 3.3288083),\n",
+       " ('modclub', 3.3230174),\n",
+       " ('unfilter', 3.2809386),\n",
+       " ('Cyberpunk_Music', 3.2804885)]"
       ]
      },
-     "execution_count": 414,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,77 +527,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def subreddits_interacted_by_user(username):\n",
     "    sample_user_id = np.where(users == username)[0][0]\n",
     "    _idlist =  comments.getcol(sample_user_id)\n",
-    "    return [subreddits[idx] for idx, i in enumerate(xkcd.toarray()) if i != 0.0]"
+    "    return [subreddits[idx] for idx, i in enumerate(_idlist.toarray()) if i != 0.0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['linuxquestions',\n",
-       " 'cpp',\n",
-       " 'NBASpurs',\n",
-       " 'computertechs',\n",
-       " 'Serendipity',\n",
-       " 'Libertarian',\n",
-       " 'TheFacebookDelusion',\n",
-       " 'Kappa',\n",
-       " 'battlestations',\n",
-       " 'linux_gaming',\n",
-       " 'creepy',\n",
-       " 'Banshee',\n",
-       " 'harrypotter',\n",
-       " 'iphone',\n",
-       " 'collapse',\n",
-       " 'gatech',\n",
-       " 'Cricket',\n",
-       " 'calvinandhobbes',\n",
-       " 'PS4',\n",
-       " 'MLS',\n",
-       " 'Gunners',\n",
-       " 'lolphp',\n",
-       " 'changetip',\n",
-       " 'Python',\n",
-       " 'latterdaysaints',\n",
-       " 'scientology',\n",
-       " 'startrek',\n",
-       " 'electronics',\n",
-       " 'learnpython',\n",
-       " 'ukpolitics',\n",
-       " 'acecombat',\n",
-       " 'lgbt',\n",
-       " 'ShitAmericansSay',\n",
-       " 'SacredGeometry',\n",
-       " 'philadelphia',\n",
-       " 'JamesBond',\n",
+       "['Austin',\n",
+       " 'BlackPeopleTwitter',\n",
+       " 'videos',\n",
+       " 'Planetside',\n",
+       " 'roosterteeth',\n",
+       " 'mistyfront',\n",
+       " 'oculus',\n",
+       " 'TrollXGirlGamers',\n",
+       " 'DIY',\n",
        " 'speedrun',\n",
-       " 'CodAW',\n",
-       " 'Austin',\n",
-       " 'sweden',\n",
-       " 'techsupportanimals',\n",
-       " 'sysadmin',\n",
-       " 'shittyaskreddit',\n",
-       " 'RWBY',\n",
-       " 'CFBOffTopic',\n",
-       " 'minecraftsuggestions',\n",
-       " 'phillycycling',\n",
-       " 'AndroidMasterRace',\n",
-       " 'socialskills',\n",
-       " 'MilitaryPorn']"
+       " 'houston',\n",
+       " 'wow',\n",
+       " 'chadev',\n",
+       " 'skyrim',\n",
+       " 'AskFeminists',\n",
+       " 'brasil',\n",
+       " 'firefly',\n",
+       " 'asktransgender',\n",
+       " 'Ubuntu',\n",
+       " 'clickbaitEd',\n",
+       " 'ANormalDayInRussia',\n",
+       " 'gamedev',\n",
+       " 'FloridaMan',\n",
+       " 'javascript',\n",
+       " 'rva',\n",
+       " 'sex',\n",
+       " 'CasualConversation',\n",
+       " 'moraldilemmas',\n",
+       " 'me_irl',\n",
+       " 'NoStupidQuestions',\n",
+       " 'trackers',\n",
+       " 'NoFap',\n",
+       " 'ynab',\n",
+       " 'Multicopter',\n",
+       " 'ProtectAndServe',\n",
+       " 'geography',\n",
+       " 'sciencefiction',\n",
+       " 'rccars',\n",
+       " 'InternetIsBeautiful',\n",
+       " 'arabs',\n",
+       " 'Frozen',\n",
+       " 'economy',\n",
+       " 'crypto',\n",
+       " 'techsupportgore',\n",
+       " 'latterdaysaints',\n",
+       " 'lgbt',\n",
+       " 'asoiaf',\n",
+       " 'collapse',\n",
+       " 'makeyourchoice',\n",
+       " 'ar15']"
       ]
      },
-     "execution_count": 416,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,6 +605,91 @@
    "source": [
     "# sample 50 reddits with which xkcd_transcriber has interacted with.\n",
     "random.sample(subreddits_interacted_by_user('xkcd_transcriber'), 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "052636a09580493596615d6637f010cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3abde4b893c441dba54ae76b72886c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=2323019), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set seed to get the same train and test set\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "filename = 'interactions_30_ch_no_bots'\n",
+    "train_filename = 'interactions_train'\n",
+    "test_filename = 'interactions_test'\n",
+    "\n",
+    "def create_test_dataset():\n",
+    "    data = defaultdict(lambda: [])\n",
+    "    with open(filename) as csvfile:\n",
+    "        datareader = csv.reader(csvfile, delimiter=' ')        \n",
+    "        for subreddit, user, comments, _ in tqdm.tqdm_notebook(datareader):\n",
+    "            data[user].append((subreddit, comments))\n",
+    "    \n",
+    "\n",
+    "    f_train = open(train_filename, 'a')\n",
+    "    f_test = open(test_filename, 'a')\n",
+    "    \n",
+    "    for user, items in tqdm.tqdm_notebook(data.items()):\n",
+    "        np.random.shuffle(items)\n",
+    "        \n",
+    "        if (len(items)) >= 5:\n",
+    "            for item in items[:-1]:\n",
+    "                line = ' '.join(list(map(str, [item[0], user, item[1]]))) + '\\n'\n",
+    "                f_train.write(line)\n",
+    "            \n",
+    "            last = items[-1]\n",
+    "            line = ' '.join(list(map(str, [last[0], user, last[1]]))) + '\\n'\n",
+    "            f_test.write(line)\n",
+    "    \n",
+    "    f_train.close()\n",
+    "    f_test.close()\n",
+    "        \n",
+    "create_test_dataset()"
    ]
   },
   {
