Add: AUC evaluation for BPR

--- a/models.ipynb
+++ b/models.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,13 +609,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "052636a09580493596615d6637f010cf",
+       "model_id": "1188b1b729324d5cbc1874794e2b7aa3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -627,16 +627,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3abde4b893c441dba54ae76b72886c5",
+       "model_id": "1225a3506f834839a37a47450d84b53c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -646,13 +639,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -660,10 +646,9 @@
     "np.random.seed(42)\n",
     "\n",
     "filename = 'interactions_30_ch_no_bots'\n",
-    "train_filename = 'interactions_train'\n",
-    "test_filename = 'interactions_test'\n",
+    "train_filename = 'interactions_5'\n",
     "\n",
-    "def create_test_dataset():\n",
+    "def create_dataset():\n",
     "    data = defaultdict(lambda: [])\n",
     "    with open(filename) as csvfile:\n",
     "        datareader = csv.reader(csvfile, delimiter=' ')        \n",
@@ -672,32 +657,434 @@
     "    \n",
     "\n",
     "    f_train = open(train_filename, 'a')\n",
-    "    f_test = open(test_filename, 'a')\n",
     "    \n",
     "    for user, items in tqdm.tqdm_notebook(data.items()):\n",
     "        np.random.shuffle(items)\n",
-    "        \n",
-    "        if (len(items)) >= 5:\n",
-    "            for item in items[:-1]:\n",
+    "        if len(items) >= 5:\n",
+    "            for item in items:\n",
     "                line = ' '.join(list(map(str, [item[0], user, item[1]]))) + '\\n'\n",
     "                f_train.write(line)\n",
-    "            \n",
-    "            last = items[-1]\n",
-    "            line = ' '.join(list(map(str, [last[0], user, last[1]]))) + '\\n'\n",
-    "            f_test.write(line)\n",
     "    \n",
     "    f_train.close()\n",
-    "    f_test.close()\n",
     "        \n",
-    "create_test_dataset()"
+    "create_dataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = []\n",
+    "with open('interactions_5') as csvfile:\n",
+    "    datareader = csv.reader(csvfile, delimiter=' ')\n",
+    "    for subreddit, user, comments in datareader:\n",
+    "        data.append([user, subreddit, int(comments)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame.from_records(data)\n",
+    "data.columns = ['user', 'subreddit', 'comments']\n",
+    "\n",
+    "data['user'] = data['user'].astype(\"category\")\n",
+    "data['subreddit'] = data['subreddit'].astype(\"category\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a sparse matrix of all the artist/user/play triples\n",
+    "comments = coo_matrix((data['comments'].astype(float), \n",
+    "                   (data['subreddit'].cat.codes, \n",
+    "                    data['user'].cat.codes)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<35276x517371 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 5731059 stored elements in COOrdinate format>"
+      ]
+     },
+     "execution_count": 359,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddits = data['subreddit'].cat.categories.array.to_numpy()\n",
+    "users = data['user'].cat.categories.array.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of users for BPR model: 517371\n",
+      "Number of subreddits for BPR model: 35276\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of users for BPR model: %s' % len(users))\n",
+    "print('Number of subreddits for BPR model: %s' % len(subreddits))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the index and the reverse index for the users and subreddits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def item_to_index(things):\n",
+    "    index = {}\n",
+    "    for idx, item in enumerate(things):\n",
+    "        index[item] = idx\n",
+    "    return index\n",
+    "\n",
+    "def index_to_item(index):\n",
+    "    things = np.empty(len(index), dtype=object)\n",
+    "    for item, idx in index.items():\n",
+    "        things[idx] = item\n",
+    "    return things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subreddits_index = item_to_index(subreddits)\n",
+    "users_index = item_to_index(users)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting test set\n",
+    "\n",
+    "We will pluck out the test set, as per the strategy given in the paper [BPR: Bayesian Personalized Ranking from Implicit Feedback](https://arxiv.org/pdf/1205.2618.pdf), section 6.2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_test_split(coo_comments):\n",
+    "    \"\"\"\n",
+    "    Omits random user subreddit interactions, zeros them out \n",
+    "    and appends them to the test list.\n",
+    "    \"\"\"\n",
+    "    csr_comments = coo_comments.tocsr()\n",
+    "    \n",
+    "    data = defaultdict(lambda: [])\n",
+    "    with open('interactions_5') as csvfile:\n",
+    "        datareader = csv.reader(csvfile, delimiter=' ')        \n",
+    "        for subreddit, user, comments in tqdm.tqdm_notebook(datareader):\n",
+    "            data[user].append((subreddit, comments))\n",
+    "    \n",
+    "    train_set = []\n",
+    "    test_set = []\n",
+    "    \n",
+    "    for user, items in tqdm.tqdm_notebook(data.items()):\n",
+    "        np.random.shuffle(items)\n",
+    "        test_item = items[0]\n",
+    "        test_comments = items[1]\n",
+    "        \n",
+    "        test_subreddit = test_item[0]\n",
+    "        # zero out a user item interaction\n",
+    "        csr_comments[subreddits_index[test_subreddit], users_index[user]] = 0\n",
+    "        \n",
+    "        test_set.append([test_subreddit, user, int(comments)])\n",
+    "        \n",
+    "        for item in items[1:]:\n",
+    "            train_set.append([item[0], user, int(item[1])])\n",
+    "        \n",
+    "    csr_comments.eliminate_zeros()\n",
+    "    return train_set, test_set, csr_comments.tocoo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "239592f849554cf89b163b53df5757d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ca9200f3c524cf6a736dad6b0774f8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=517371), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "train_set, test_set, comments = train_test_split(comments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AUC Metric\n",
+    "\n",
+    "We will implement the AUC Metric for evaluation of BPR based methods. We take the definition given in the paper [BPR: Bayesian Personalized Ranking from Implicit Feedback](https://arxiv.org/pdf/1205.2618.pdf), section 6.2 . AUC is defined as \n",
+    " \n",
+    "$$AUC = \\frac{1}{| U |} \\sum_u \\frac{1}{|E(u)|} \\sum_{(i, j) \\in E(u)} \\delta(\\hat{x}_{ui} - \\hat{x}_{xj}) $$\n",
+    "\n",
+    "where $$E(u) := \\{(i, j) | (u, i) \\in S_{test} ∧ (u, j) \\notin (S_{test} ∪ S_{train})\\}$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a46d2fedb5045628884af5bcbd93095",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=5213688), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03cc353c99584852a69a181bf6bf0412",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=517371), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# create E(u) list for each user and store it use ids instead of names to store them\n",
+    "E_u = defaultdict(lambda : set())\n",
+    "\n",
+    "for subreddit, user, _ in tqdm.tqdm_notebook(train_set):\n",
+    "        E_u[users_index[user]].add(subreddits_index[subreddit])\n",
+    "            \n",
+    "for subreddit, user, _ in tqdm.tqdm_notebook(test_set):\n",
+    "        E_u[users_index[user]].add(subreddits_index[subreddit])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train the bpr model \n",
+    "from implicit.bpr import BayesianPersonalizedRanking\n",
+    "\n",
+    "params = {\"factors\": 63}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BayesianPersonalizedRanking(**params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<35276x517371 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 5213688 stored elements in COOrdinate format>"
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [03:18<00:00,  1.29s/it, correct=94.68%, skipped=9.65%]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_subreddits = len(subreddits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def auc(test_set, user_factors, subreddit_factors, subreddits, users):\n",
+    "    \"\"\"\n",
+    "    Returns the auc score on a test data set\n",
+    "    \"\"\"\n",
+    "    num_users = len(test_set)\n",
+    "    \n",
+    "    total = 0\n",
+    "    \n",
+    "    # treat the signal as 1 as per the implicit bpr paper\n",
+    "    for subreddit, user, signal in tqdm.tqdm_notebook(test_set):  # outer summation\n",
+    "        # inner summation \n",
+    "        # TODO: try to parallelize \n",
+    "        u = users_index[user]\n",
+    "        i = subreddits_index[subreddit]\n",
+    "        \n",
+    "        x_ui = user_factors[u].dot(subreddit_factors[i])\n",
+    "        \n",
+    "        js = []\n",
+    "        \n",
+    "        for j in range(0, num_subreddits):\n",
+    "            if j != i and j not in E_u[u]:\n",
+    "                js.append(j)\n",
+    "                \n",
+    "        total += np.sum(np.heaviside(x_ui - user_factors[u].dot(subreddit_factors[js].T), 0)) / len(js)\n",
+    "            \n",
+    "        # for j in range(0, subreddits):\n",
+    "        #    numel = 0\n",
+    "        #    total_user = 0\n",
+    "        #    if j != i and j not in E_u[u]:\n",
+    "        #        numel += 1\n",
+    "        #        x_uj = user_factors[u].dot(subreddit_factors[j])\n",
+    "        #            total_user += heaviside(x_ui - x_uj)\n",
+    "        \n",
+    "        # total += (total_user * 1.0 / numel)\n",
+    "    \n",
+    "    return total / num_users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "059ad0e5cc2e421cb160064e53498d66",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=10000), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8099910909749478"
+      ]
+     },
+     "execution_count": 377,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc(test_set[:10000], model.user_factors, model.item_factors, subreddits, users)"
+   ]
   }
  ],
  "metadata": {
